# raytracing.github.io

./: CMakeLists.txt  aabb.hpp  array.hpp  box.hpp  bvh.hpp  camera.hpp  checker.hpp  color.hpp  constant.hpp  dielec.hpp  diffuse.hpp  hit.hpp  image.hpp  interval.hpp  isotropic.hpp  lambert.hpp  main.cpp  material.hpp  math.hpp  metal.hpp  noise.hpp  object.hpp  perlin.hpp  pixmap.hpp  point.hpp  quad.hpp  random.hpp  ray.hpp  rotate.hpp  solid.hpp  sphere.hpp  texture.hpp  translate.hpp  types.hpp  vec.hpp
more/: half.cpp  int_sphere.cpp  int_x2.cpp  pi.cpp
run/: img-1.02.ppm  open  run
